# djangocms-helpers

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
djangocms_helpers/: __init__.py  admin.py  apps.py  receivers.py
djangocms_helpers/fixes/: aldryn_sso_admin.py  language_slug_fix.py
djangocms_helpers/management/commands/: create_cms_plugin.py  test_pages_on_real_db.py
djangocms_helpers/monkey_patches/: static_placeholder_publishing_fix.py
djangocms_helpers/sentry_500_error_handler/: ignore_io_error.py  views.py
djangocms_helpers/sentry_500_error_handler/templates/error_handler/: 404.html  500.html
djangocms_helpers/tests/: test_pages.py
djangocms_helpers/utils/: send_email.py
