[metadata]
name = djangocms-helpers
author = Victor Yunenko
author-email = victor@what.digital
summary = A set of fixes, patches and utils for django-cms
    Source Code = https://gitlab.com/what-digital/djangocms-helpers
license = MIT
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python3
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django CMS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords =
    django
